// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search Search suggestions Should dismiss suggestions when clearing input 1`] = `
<div>
  <section
    class="search_container home"
  >
    <h1>
      Movie Overflow
    </h1>
    <div
      class="search"
    >
      <div
        class="filters"
      >
        <div
          class="radio_button"
        >
          <input
            checked=""
            data-testid="All-radio"
            id="all"
            name="All"
            type="radio"
            value="all"
          />
          <label
            for="all"
          >
            All
          </label>
        </div>
        <div
          class="radio_button"
        >
          <input
            data-testid="Movie-radio"
            id="movie"
            name="Movie"
            type="radio"
            value="movie"
          />
          <label
            for="movie"
          >
            Movie
          </label>
        </div>
        <div
          class="radio_button"
        >
          <input
            data-testid="Tv Series-radio"
            id="tv"
            name="Tv Series"
            type="radio"
            value="tv"
          />
          <label
            for="tv"
          >
            Tv Series
          </label>
        </div>
        <div
          class="radio_button"
        >
          <input
            data-testid="People-radio"
            id="person"
            name="People"
            type="radio"
            value="person"
          />
          <label
            for="person"
          >
            People
          </label>
        </div>
      </div>
      <div
        class="input_wrapper"
      >
        <svg
          class="search_icon"
          data-testid="search-icon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          type="submit"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10.442 10.442a1 1 0 011.415 0l3.85 3.85a1 1 0 01-1.414 1.415l-3.85-3.85a1 1 0 010-1.415z"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M6.5 12a5.5 5.5 0 100-11 5.5 5.5 0 000 11zM13 6.5a6.5 6.5 0 11-13 0 6.5 6.5 0 0113 0z"
            fill-rule="evenodd"
          />
        </svg>
        <input
          autocomplete="off"
          class="search_input"
          placeholder="Search..."
          type="text"
          value=""
        />
        <svg
          class="close_icon false"
          data-testid="clear-icon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M405 136.798L375.202 107 256 226.202 136.798 107 107 136.798 226.202 256 107 375.202 136.798 405 256 285.798 375.202 405 405 375.202 285.798 256z"
          />
        </svg>
      </div>
    </div>
  </section>
</div>
`;

exports[`Search Search suggestions Should dismiss suggestions with ESC 1`] = `
<div>
  <section
    class="search_container home"
  >
    <h1>
      Movie Overflow
    </h1>
    <div
      class="search"
    >
      <div
        class="filters"
      >
        <div
          class="radio_button"
        >
          <input
            checked=""
            data-testid="All-radio"
            id="all"
            name="All"
            type="radio"
            value="all"
          />
          <label
            for="all"
          >
            All
          </label>
        </div>
        <div
          class="radio_button"
        >
          <input
            data-testid="Movie-radio"
            id="movie"
            name="Movie"
            type="radio"
            value="movie"
          />
          <label
            for="movie"
          >
            Movie
          </label>
        </div>
        <div
          class="radio_button"
        >
          <input
            data-testid="Tv Series-radio"
            id="tv"
            name="Tv Series"
            type="radio"
            value="tv"
          />
          <label
            for="tv"
          >
            Tv Series
          </label>
        </div>
        <div
          class="radio_button"
        >
          <input
            data-testid="People-radio"
            id="person"
            name="People"
            type="radio"
            value="person"
          />
          <label
            for="person"
          >
            People
          </label>
        </div>
      </div>
      <div
        class="input_wrapper"
      >
        <svg
          class="search_icon"
          data-testid="search-icon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          type="submit"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10.442 10.442a1 1 0 011.415 0l3.85 3.85a1 1 0 01-1.414 1.415l-3.85-3.85a1 1 0 010-1.415z"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M6.5 12a5.5 5.5 0 100-11 5.5 5.5 0 000 11zM13 6.5a6.5 6.5 0 11-13 0 6.5 6.5 0 0113 0z"
            fill-rule="evenodd"
          />
        </svg>
        <input
          autocomplete="off"
          class="search_input"
          placeholder="Search..."
          type="text"
          value="my movie"
        />
        <svg
          class="close_icon visible"
          data-testid="clear-icon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M405 136.798L375.202 107 256 226.202 136.798 107 107 136.798 226.202 256 107 375.202 136.798 405 256 285.798 375.202 405 405 375.202 285.798 256z"
          />
        </svg>
      </div>
    </div>
  </section>
</div>
`;

exports[`Search Search suggestions Should navigate to suggestion 1`] = `
<div>
  <section
    class="search_container home"
  >
    <h1>
      Movie Overflow
    </h1>
    <div
      class="search"
    >
      <div
        class="filters"
      >
        <div
          class="radio_button"
        >
          <input
            checked=""
            data-testid="All-radio"
            id="all"
            name="All"
            type="radio"
            value="all"
          />
          <label
            for="all"
          >
            All
          </label>
        </div>
        <div
          class="radio_button"
        >
          <input
            data-testid="Movie-radio"
            id="movie"
            name="Movie"
            type="radio"
            value="movie"
          />
          <label
            for="movie"
          >
            Movie
          </label>
        </div>
        <div
          class="radio_button"
        >
          <input
            data-testid="Tv Series-radio"
            id="tv"
            name="Tv Series"
            type="radio"
            value="tv"
          />
          <label
            for="tv"
          >
            Tv Series
          </label>
        </div>
        <div
          class="radio_button"
        >
          <input
            data-testid="People-radio"
            id="person"
            name="People"
            type="radio"
            value="person"
          />
          <label
            for="person"
          >
            People
          </label>
        </div>
      </div>
      <div
        class="input_wrapper"
      >
        <svg
          class="search_icon"
          data-testid="search-icon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          type="submit"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10.442 10.442a1 1 0 011.415 0l3.85 3.85a1 1 0 01-1.414 1.415l-3.85-3.85a1 1 0 010-1.415z"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M6.5 12a5.5 5.5 0 100-11 5.5 5.5 0 000 11zM13 6.5a6.5 6.5 0 11-13 0 6.5 6.5 0 0113 0z"
            fill-rule="evenodd"
          />
        </svg>
        <input
          autocomplete="off"
          class="search_input"
          placeholder="Search..."
          type="text"
          value="my movie"
        />
        <svg
          class="close_icon visible"
          data-testid="clear-icon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M405 136.798L375.202 107 256 226.202 136.798 107 107 136.798 226.202 256 107 375.202 136.798 405 256 285.798 375.202 405 405 375.202 285.798 256z"
          />
        </svg>
      </div>
    </div>
  </section>
</div>
`;

exports[`Search Search suggestions Should show no suggestions when no results 1`] = `
<div>
  <section
    class="search_container home"
  >
    <h1>
      Movie Overflow
    </h1>
    <div
      class="search"
    >
      <div
        class="filters"
      >
        <div
          class="radio_button"
        >
          <input
            checked=""
            data-testid="All-radio"
            id="all"
            name="All"
            type="radio"
            value="all"
          />
          <label
            for="all"
          >
            All
          </label>
        </div>
        <div
          class="radio_button"
        >
          <input
            data-testid="Movie-radio"
            id="movie"
            name="Movie"
            type="radio"
            value="movie"
          />
          <label
            for="movie"
          >
            Movie
          </label>
        </div>
        <div
          class="radio_button"
        >
          <input
            data-testid="Tv Series-radio"
            id="tv"
            name="Tv Series"
            type="radio"
            value="tv"
          />
          <label
            for="tv"
          >
            Tv Series
          </label>
        </div>
        <div
          class="radio_button"
        >
          <input
            data-testid="People-radio"
            id="person"
            name="People"
            type="radio"
            value="person"
          />
          <label
            for="person"
          >
            People
          </label>
        </div>
      </div>
      <div
        class="input_wrapper"
      >
        <svg
          class="search_icon"
          data-testid="search-icon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          type="submit"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10.442 10.442a1 1 0 011.415 0l3.85 3.85a1 1 0 01-1.414 1.415l-3.85-3.85a1 1 0 010-1.415z"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M6.5 12a5.5 5.5 0 100-11 5.5 5.5 0 000 11zM13 6.5a6.5 6.5 0 11-13 0 6.5 6.5 0 0113 0z"
            fill-rule="evenodd"
          />
        </svg>
        <input
          autocomplete="off"
          class="search_input"
          placeholder="Search..."
          type="text"
          value="my movie"
        />
        <svg
          class="close_icon visible"
          data-testid="clear-icon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M405 136.798L375.202 107 256 226.202 136.798 107 107 136.798 226.202 256 107 375.202 136.798 405 256 285.798 375.202 405 405 375.202 285.798 256z"
          />
        </svg>
      </div>
    </div>
  </section>
</div>
`;

exports[`Search Search suggestions Should trigger search for suggestions 1`] = `
<div>
  <section
    class="search_container home"
  >
    <h1>
      Movie Overflow
    </h1>
    <div
      class="search"
    >
      <div
        class="filters"
      >
        <div
          class="radio_button"
        >
          <input
            checked=""
            data-testid="All-radio"
            id="all"
            name="All"
            type="radio"
            value="all"
          />
          <label
            for="all"
          >
            All
          </label>
        </div>
        <div
          class="radio_button"
        >
          <input
            data-testid="Movie-radio"
            id="movie"
            name="Movie"
            type="radio"
            value="movie"
          />
          <label
            for="movie"
          >
            Movie
          </label>
        </div>
        <div
          class="radio_button"
        >
          <input
            data-testid="Tv Series-radio"
            id="tv"
            name="Tv Series"
            type="radio"
            value="tv"
          />
          <label
            for="tv"
          >
            Tv Series
          </label>
        </div>
        <div
          class="radio_button"
        >
          <input
            data-testid="People-radio"
            id="person"
            name="People"
            type="radio"
            value="person"
          />
          <label
            for="person"
          >
            People
          </label>
        </div>
      </div>
      <div
        class="input_wrapper"
      >
        <svg
          class="search_icon"
          data-testid="search-icon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          type="submit"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10.442 10.442a1 1 0 011.415 0l3.85 3.85a1 1 0 01-1.414 1.415l-3.85-3.85a1 1 0 010-1.415z"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M6.5 12a5.5 5.5 0 100-11 5.5 5.5 0 000 11zM13 6.5a6.5 6.5 0 11-13 0 6.5 6.5 0 0113 0z"
            fill-rule="evenodd"
          />
        </svg>
        <input
          autocomplete="off"
          class="search_input"
          placeholder="Search..."
          type="text"
          value="my movie"
        />
        <svg
          class="close_icon visible"
          data-testid="clear-icon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M405 136.798L375.202 107 256 226.202 136.798 107 107 136.798 226.202 256 107 375.202 136.798 405 256 285.798 375.202 405 405 375.202 285.798 256z"
          />
        </svg>
        <div
          class="suggestions false"
        >
          <div
            class="item"
          >
            <h3>
              mockActor
            </h3>
            <div
              class="type"
            >
              person
            </div>
          </div>
          <div
            class="item"
          >
            <h3>
              mockTvSeries
            </h3>
            <div
              class="type"
            >
              tv
            </div>
          </div>
          <div
            class="item"
          >
            <h3>
              mockMovie
            </h3>
            <div
              class="type"
            >
              all
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Search When rendering Should render consistently 1`] = `
<div>
  <section
    class="search_container home"
  >
    <h1>
      Movie Overflow
    </h1>
    <div
      class="search"
    >
      <div
        class="filters"
      >
        <div
          class="radio_button"
        >
          <input
            checked=""
            data-testid="All-radio"
            id="all"
            name="All"
            type="radio"
            value="all"
          />
          <label
            for="all"
          >
            All
          </label>
        </div>
        <div
          class="radio_button"
        >
          <input
            data-testid="Movie-radio"
            id="movie"
            name="Movie"
            type="radio"
            value="movie"
          />
          <label
            for="movie"
          >
            Movie
          </label>
        </div>
        <div
          class="radio_button"
        >
          <input
            data-testid="Tv Series-radio"
            id="tv"
            name="Tv Series"
            type="radio"
            value="tv"
          />
          <label
            for="tv"
          >
            Tv Series
          </label>
        </div>
        <div
          class="radio_button"
        >
          <input
            data-testid="People-radio"
            id="person"
            name="People"
            type="radio"
            value="person"
          />
          <label
            for="person"
          >
            People
          </label>
        </div>
      </div>
      <div
        class="input_wrapper"
      >
        <svg
          class="search_icon"
          data-testid="search-icon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          type="submit"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10.442 10.442a1 1 0 011.415 0l3.85 3.85a1 1 0 01-1.414 1.415l-3.85-3.85a1 1 0 010-1.415z"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M6.5 12a5.5 5.5 0 100-11 5.5 5.5 0 000 11zM13 6.5a6.5 6.5 0 11-13 0 6.5 6.5 0 0113 0z"
            fill-rule="evenodd"
          />
        </svg>
        <input
          autocomplete="off"
          class="search_input"
          placeholder="Search..."
          type="text"
          value=""
        />
        <svg
          class="close_icon false"
          data-testid="clear-icon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M405 136.798L375.202 107 256 226.202 136.798 107 107 136.798 226.202 256 107 375.202 136.798 405 256 285.798 375.202 405 405 375.202 285.798 256z"
          />
        </svg>
      </div>
    </div>
  </section>
</div>
`;
